force-app/main/default/objects/copado__MC_Notification__mdt/fields/copado__Subject__c.field-meta.xml
<CustomField>
    <fullName>copado__Subject__c</fullName>
    <description>Subject of the notiication</description>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>