force-app/main/default/objects/copado__MC_Notification__mdt/fields/copado__Template__c.field-meta.xml
<CustomField>
    <fullName>copado__Template__c</fullName>
    <description>This is the body template of the notification</description>
    <label>Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>